--- a/sampurna/Sampurna.html
+++ b/sampurna/Sampurna.html
@@ -18,15 +18,22 @@
 </header>
 <section>
 <h2>About Myself</h2>
-<p>
-Sandeep Maheshwari is a name among millions who struggled, failed and surged ahead in search of success, happiness and contentment.<br>Just like any other middle class guy, he too had a bunch of unclear dreams and a blurred vision of his goals in life.<br>
-All he had was an undying learning attitude to hold on to. Rowing through ups and downs, it was time that taught him the true meaning of his life.<br>Apart from being a successful entrepreneur, he is a guide, a mentor, a role model and a youth icon for millions of people all over the world.<br>
-People love and adore him for his great mission of making everybody believe in them and helping people to make their life 'Aasaan' (Easy).<br>His unshakable faith in the divine power grants him strength to thrive.<br>Being at the helm of success, it is quite astonishing to know that money does not lure him.<br>His vision is to ignite and inspire the entrepreneurial spirit of tomorrow's leaders and to help them succeed.<br>
+  <p>
+    Firstly Thank you for visiting my page.<br>
+    I haven't done anything great in my life till now but I have plans to do something so that after me people remember me by my work.<br>
+    And for that I'm Constantly working on myself. I belong to Raebareli a small town near Lucknow.<br>
+    I have done my schoolong from S.J.S. Public School Raebareli.<br>
+    My academics were always good but I was far away from co-curricular activities like sports because of my obese body and for which I'm <br>
+    currently trying my level best to be in shape so that I should become more Confident.<br>
+    My short term goal is to complete my graduation and be a successful Engineer and my long term goal is to own a Multi National Company <br>
+    and make me and my parents proud. Currently I'm in first year of B-tech in Electrical Engineering from Dayanand Sagar College of Engineering,Banglore.<br>
+    Anyone wants to know something about Engineering or having any academic problem in their 10+2 may directly contact me through my Instagram handle.
+  </p>
 <h2>Achievements</h2>
 <ul>
 <li>Born in a great city of Uttar Pradesh i.e. Raebareli.</li>
 <li>Completed my schooling from well known school i.e. S.J.S. PUBLIC SCHOOL.</li>
-<li>Earned 9.6 CGPA in class 10th.<progress value="9.6" max="10"></progress></li>
+<li>Earned 9.8 CGPA in class 10th.<progress value="9.8" max="10"></progress></li>
 <li>Earned 80% in class 12th</li>
 <li>Cracked Entrance Exams like JEE mains,VITEE,BITSAT,UPSEE,MMMUT,COMEDK etc</li>
 <li>Currently pursuing B-tech from DSCE,Banglore and constantly excelling in academics</li>
